--- a/base.css
+++ b/base.css
@@ -21,7 +21,7 @@ nav li li {
   width: 200px;
 }
 h1 {
-  font-family: "Helvetica", "serif"; /* STORY 2.- FUENTES - Apartado A */ /* STORY 2.- FUENTES - Apartado C */
+  font-family: "Helvetica", serif; /* STORY 2.- FUENTES - Apartado A */ /* STORY 2.- FUENTES - Apartado C */
   font-size: 1.2em; /* STORY 2.- FUENTES - Apartado B */
   text-align: center; /* STORY 2.- ALINEACIÓN - Apartado E */
   text-decoration: underline; /* STORY 2.- FORMATO - Apartado F */ /*SUBRAYADO*/
@@ -42,6 +42,7 @@ p {
   line-height: 1.8; /* STORY 2.- ESPACIADO - Apartado K */
   word-spacing: 5px; /* STORY 2.- ESPACIADO - Apartado L */ /*ESPACIO ENTRE PALABRAS*/
   text-indent: 20px; /* STORY 2.- FORMATO - Apartado M */
+  font-family: "Space Mono", monospace; /* STORY 2.- FORMATO - Apartado F */
 }
 
 ol {
